Specify lcov version in spack.yaml

--- a/spack.yaml
+++ b/spack.yaml
@@ -14,7 +14,7 @@ spack:
   - kokkos-tools +mpi +papi 
   - arborx cxxstd=20 +openmp +mpi
   - googletest cxxstd=20
-  - lcov
+  - lcov@2.0
 
   config:
     install_tree:
